--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,17 +14,17 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Setup Environment
-      uses: ./.github/workflows/steps/01-setup-env.yml
+      uses: ./.github/workflows/steps/setup-env
       
     - name: Setup PMD
-      uses: ./.github/workflows/steps/02-setup-pmd.yml
+      uses: ./.github/workflows/steps/setup-pmd
       
     - name: Configure Settings
-      uses: ./.github/workflows/steps/03-configure.yml
+      uses: ./.github/workflows/steps/configure
       
     - name: Run Tests
-      uses: ./.github/workflows/steps/04-test.yml
+      uses: ./.github/workflows/steps/test
       
     - name: Upload Artifacts
       if: always()
-      uses: ./.github/workflows/steps/05-artifacts.yml 
+      uses: ./.github/workflows/steps/artifacts 
