--- a/.github/workflows/steps/setup-env/action.yml
+++ b/.github/workflows/steps/setup-env/action.yml
@@ -1,5 +1,5 @@
 name: 'Setup Environment'
-description: 'Setup Python and Java environment'
+description: 'Setup Python and Podman environment'
 
 runs:
   using: composite
@@ -8,14 +8,15 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '21'
 
-    - name: Install dependencies
+    - name: Install Podman
+      shell: bash
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y podman
+        podman --version
+
+    - name: Install Python dependencies
       shell: bash
       run: |
         python -m pip install --upgrade pip
