--- a/.github/workflows/steps/artifacts/action.yml
+++ b/.github/workflows/steps/artifacts/action.yml
@@ -5,10 +5,13 @@ runs:
   using: composite
   steps:
     - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: rule-artifacts
         path: |
           rule.xml
           pmd_report.json
-          .ast_cache/ 
+          .ast_cache/
+        retention-days: 5
+        compression-level: 6
+        overwrite: true 
