ci: temporarily comment out token configuration
- Comment out Configure Settings step
- Keep original test validation
- Maintain token dependency
- Add comment about temporary status

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,9 @@ jobs:
     - name: Setup PMD Container
       uses: ./.github/workflows/steps/setup-pmd
       
-    - name: Configure Settings
-      uses: ./.github/workflows/steps/configure
+    # Temporarily commented out
+    # - name: Configure Settings
+    #   uses: ./.github/workflows/steps/configure
       
     - name: Run Tests
       uses: ./.github/workflows/steps/test
