--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,31 @@
 name: Rule Bridge CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# Temporarily inactive
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
     
-    steps:
-    - uses: actions/checkout@v4
+#     steps:
+#     - uses: actions/checkout@v4
     
-    - name: Setup Environment
-      uses: ./.github/workflows/steps/setup-env
+#     - name: Setup Environment
+#       uses: ./.github/workflows/steps/setup-env
       
-    - name: Setup PMD Container
-      uses: ./.github/workflows/steps/setup-pmd
+#     - name: Setup PMD Container
+#       uses: ./.github/workflows/steps/setup-pmd
       
-    # Temporarily commented out
-    # - name: Configure Settings
-    #   uses: ./.github/workflows/steps/configure
+#     - name: Configure Settings
+#       uses: ./.github/workflows/steps/configure
       
-    - name: Run Tests
-      uses: ./.github/workflows/steps/test
+#     - name: Run Tests
+#       uses: ./.github/workflows/steps/test
       
-    - name: Upload Artifacts
-      if: always()
-      uses: ./.github/workflows/steps/artifacts 
+#     - name: Upload Artifacts
+#       if: always()
+#       uses: ./.github/workflows/steps/artifacts 
